<resources>
    <string name="app_name">MyBluetooth-Kotlin</string>
    <string name="action_settings">Settings</string>
    <string name="action_language">Language</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="main_fragment_label">Welcome</string>
    <string name="connect_fragment_label">Connect</string>
    <string name="connectdevice_label">Connect Device</string>
    <string name="next">Next</string>
    <string name="start">Start Connect</string>
    <string name="test">Test button</string>
    <string name="previous">Previous</string>
    <string name="current">CURRENT</string>
    <string name="voltage">VOLTAGE</string>
    <string name="temp">TEMP</string>
    <string name="charge">CHARGE</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="more_info">More Information</string>
    <string name="more_detail">More Details</string>
    <string name="is_charging_label">Time to fully charge</string>
    <string name="back_to_previous">Back</string>
    <string name="temp_unit">°C</string>
    <string name="amp_unit">A</string>
    <string name="voltage_unit">V</string>
</resources>
