<?xml version="1.0" encoding="UTF-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout tools:context="BatteryTileInformation" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/back_button"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_to_previous"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/more_info"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/more_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TableLayout android:layout_height="0dp" android:layout_width="280dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" android:background="@android:color/transparent" android:layout_marginEnd="32dp" android:layout_marginTop="48dp" android:layout_marginStart="32dp">
        <TableRow android:textAlignment="center">
            <RelativeLayout>

                <ImageView
                    android:id="@+id/battery"
                    android:layout_width="240dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/battery"
                    app:srcCompat="@drawable/battery" />

                <TextView
                    android:id="@+id/pc_remaining"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </TableRow>
        <TableRow>
            <RelativeLayout>

                <ImageView
                    android:id="@+id/temp_icon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/icons_bt"
                    app:srcCompat="@drawable/icons_bt"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/temp_label"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="12dp"
                    android:text="@string/temp"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/temp_info"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/temp_unit"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="100dp"
                    android:text="@string/temp_unit"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </TableRow>
        <TableRow>
            <RelativeLayout>

                <ImageView
                    android:id="@+id/current_icon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/icons_bt"
                    app:srcCompat="@drawable/icons_bt" />

                <TextView
                    android:id="@+id/current_label"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/current"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_info"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="0dp"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_unit"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="100dp"
                    android:text="@string/amp_unit"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </TableRow>
        <TableRow>
            <RelativeLayout>

                <ImageView
                    android:id="@+id/voltage_icon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/icons_bt"
                    app:srcCompat="@drawable/icons_bt" />

                <TextView
                    android:id="@+id/voltage_label"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/voltage"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/voltage_info"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="24dp"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/voltage_unit"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="100dp"
                    android:text="@string/voltage_unit"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </TableRow>
        <TableRow android:textAlignment="center">

            <TextView
                android:id="@+id/is_charging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow android:textAlignment="center">
            <TextView
                android:id="@+id/time_remaining_charge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/charge_text"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>