<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".battery_info">

    <Button
        android:id="@+id/back_to_two"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:textAlignment="center">

            <ImageView
                android:id="@+id/battery"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_span="2"
                android:src="@drawable/battery"
                app:srcCompat="@drawable/battery" />
        </TableRow>

        <TableRow android:textAlignment="center">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_span="2"
                android:text="2 HR 34 MIN"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            <RelativeLayout>

                <ImageView
                    android:id="@+id/temp_icon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/icons_bt"
                    app:srcCompat="@drawable/icons_bt" />

                <TextView
                    android:id="@+id/temp_label"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="18dp"
                    android:text="@string/temp"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/temp_info"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="20C"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout>

                <ImageView
                    android:id="@+id/current_icon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/icons_bt"
                    app:srcCompat="@drawable/icons_bt" />

                <TextView
                    android:id="@+id/current_label"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="false"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/current"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_info"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="24dp"
                    android:text="1.3A"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </TableRow>

        <TableRow>

            <RelativeLayout>

                <ImageView
                    android:id="@+id/voltage_icon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/icons_bt"
                    app:srcCompat="@drawable/icons_bt" />

                <TextView
                    android:id="@+id/voltage_label"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="18dp"
                    android:text="@string/voltage"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/voltage_info"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="24dp"
                    android:text="21.7V"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout>

                <ImageView
                    android:id="@+id/charge_icon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/icons_bt"
                    app:srcCompat="@drawable/icons_bt" />

                <TextView
                    android:id="@+id/charge_label"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="false"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/charge"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/charge_info"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="20C"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>